Update 3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md

--- a/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
@@ -79,6 +79,18 @@ Many cloud providers offer HSM as a Service, including for example AWS CloudHSM,
 
 HSMs comes with its limitations: it isExpensive compared to software-based solutions and Complex to integrate into existing systems. Despite these challenges, HSMs provide the highest level of security for encryption, authentication, and digital key management.
 
+In the following a quick comparison table between TPM and HSM:
+
+| Feature                 | TPM                                         | HSM                                                   |
+|-------------------------|--------------------------------------------|-------------------------------------------------------|
+| **Primary Purpose**      | Hardware root of trust for device          | Enterprise key management and cryptography           |
+| **Deployment**           | Integrated on motherboard / device         | External device, appliance, or network-attached      |
+| **Key Storage**          | Device-level keys (boot, disk encryption)  | Enterprise keys, certificates, PKI                   |
+| **Crypto Functions**     | Encryption, decryption, hashing, attestation | Encryption, decryption, digital signatures, high-volume operations |
+| **Scope**                | Single device                               | Organization-wide                                     |
+| **Use Case Example**     | Secure Boot, BitLocker                      | Certificate Authority, database encryption, SSL/TLS key management |
+
+
 ### Open Questions ###
 
 1. How do memory protection mechanisms like segmentation, paging, and virtual memory ensure system stability and security?
