Update 3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md

--- a/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
@@ -103,6 +103,7 @@ Memory protection mechanisms like segmentation, paging, and virtual memory ensur
 <details>
   <summary>Show answer</summary>
 Buffer overflow attacks exploit poorly managed memory by overflowing a buffer and overwriting adjacent memory, potentially allowing attackers to execute malicious code. Memory protection features like Data Execution Prevention (DEP) prevent the execution of code from data segments, while Address Space Layout Randomization (ASLR) makes it more difficult for attackers to predict memory locations. Secure coding practices such as bounds checking also help mitigate the risk of buffer overflows by ensuring that buffers cannot be overrun.
+</details>
 
 3. Can you explain the role of Data Execution Prevention (DEP) and Address Space Layout Randomization (ASLR) in protecting systems from memory-based attacks?
 <details>
