Update 3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md

--- a/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.04 Understand Security Capabilities of Information Systems (e.g. memory protection, TPM, …).md
@@ -121,6 +121,7 @@ The Trusted Platform Module (TPM) enhances system security by providing a hardwa
 <details>
   <summary>Show answer</summary>
 TPM 1.2 and TPM 2.0 are both designed to secure cryptographic operations, but TPM 2.0 offers enhanced cryptographic support, including support for newer algorithms like SHA-256 and Elliptic Curve Cryptography (ECC). It also improves authorization mechanisms and offers more flexible capabilities in securing platforms. TPM 2.0’s enhanced compatibility with modern security needs makes it the preferred choice for newer systems, providing a higher level of trust and security than TPM 1.2.
+</details>
 
 6. What are the potential privacy concerns associated with TPM, and how do they affect its use in modern systems?
 <details>
