Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -79,13 +79,13 @@ Two critical properties that strengthen encryption algorithms are confusion and 
 - **Diffusion** spreads plaintext information widely across ciphertext, so even small changes in the plaintext cause significant alterations in the ciphertext. This prevents attackers from identifying meaningful patterns.
 
 An **initialization vector (IV)** is a random value used in encryption to ensure that identical plaintext messages produce different ciphertexts. This prevents attackers from detecting patterns in encrypted communications.
-A nonce (number used once) serves a similar purpose but is typically used in authentication and key-exchange processes. It ensures that cryptographic operations cannot be replayed or reused in attacks.
+A **nonce (number used once)** serves a similar purpose but is typically used in authentication and key-exchange processes. It ensures that cryptographic operations cannot be replayed or reused in attacks.
 
 Early encryption techniques relied on two primary methods: substitution and transposition.
 
-**Substitution ciphers** replace elements of plaintext with other characters, numbers, or symbols. The Caesar cipher, which shifts letters by a fixed number of places, is a classic example.
+- **Substitution ciphers** replace elements of plaintext with other characters, numbers, or symbols. The Caesar cipher, which shifts letters by a fixed number of places, is a classic example.
 
-**Transposition ciphers** rearrange plaintext elements to obscure the original message. The Rail Fence cipher is an example, where letters are written in a zigzag pattern before being read in a different sequence.
+- **Transposition ciphers** rearrange plaintext elements to obscure the original message. The Rail Fence cipher is an example, where letters are written in a zigzag pattern before being read in a different sequence.
 
 Modern encryption combines both methods in complex ways to create highly secure algorithms.
 
@@ -96,7 +96,7 @@ Modern encryption combines both methods in complex ways to create highly secure 
 | **Transposition Cipher**| Rearranges the positions of characters without altering them (e.g., Rail Fence cipher with 2 rails). | Write zigzag: top rail `HLO WRD`, bottom rail `EL OL`, then read rows sequentially | `HLOWRDELOL`       |
 
 
-**Kerckhoffs’s Principle** states that a cryptographic system should remain secure even if everything about it—except the key—is known. This principle ensures that encryption algorithms can be publicly scrutinized for weaknesses without compromising their security. Proprietary, undisclosed encryption methods are generally discouraged, as security through obscurity is not a reliable defense.
+The **Kerckhoffs’s Principle** states that a cryptographic system should remain secure even if everything about it—except the key—is known. This principle ensures that encryption algorithms can be publicly scrutinized for weaknesses without compromising their security. Proprietary, undisclosed encryption methods are generally discouraged, as **security through obscurity** is not a reliable defense.
 
 A **zero-knowledge proof** is a cryptographic method where one party can prove to another that they know a secret without revealing the secret itself. This concept is useful in authentication systems where users need to verify their identities without exposing passwords or private keys.
 
@@ -112,6 +112,7 @@ Cryptography is the science of securing information by transforming it into an u
 <details>
   <summary>Show answer</summary>
 Confidentiality – ensures only authorized users can access information.
+
 
 Integrity – guarantees data has not been altered.
 
