Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -111,14 +111,13 @@ Cryptography is the science of securing information by transforming it into an u
 2. What are the four primary objectives of cryptography in cybersecurity?
 <details>
   <summary>Show answer</summary>
-Confidentiality – ensures only authorized users can access information.
+- Confidentiality – ensures only authorized users can access information.
 
+- Integrity – guarantees data has not been altered.
 
-Integrity – guarantees data has not been altered.
+- Authenticity – confirms the identities of users or devices.
 
-Authenticity – confirms the identities of users or devices.
-
-Non-repudiation – prevents senders from denying their actions.
+- Non-repudiation – prevents senders from denying their actions.
 </details>
 
 3. How do encryption and decryption processes work?
