Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -187,7 +187,7 @@ Selecting an encryption algorithm involves balancing security, efficiency, and c
 
 Even the strongest encryption algorithm is useless if its keys are poorly managed. Key management is the most critical aspect of cryptographic security, covering key generation, distribution, storage, rotation, and disposal.
 
-Keys should be generated using a cryptographically secure random number generator (CSPRNG) to prevent predictability. Poor randomness in key generation has led to real-world security breaches, such as weak SSH keys and predictable session tokens.
+Keys should be generated using a **cryptographically secure random number generator (CSPRNG)** to prevent predictability. Poor randomness in key generation has led to real-world security breaches, such as weak SSH keys and predictable session tokens.
 
 :bulb: A Cryptographically Secure Random Number Generator (CSPRNG) is an algorithm that generates random numbers with strong entropy, making them unpredictable and resistant to attacks such as statistical analysis and backtracking, ensuring their suitability for cryptographic applications like key generation, nonce creation, and secure token generation.
 
