Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -208,6 +208,8 @@ Cryptographic keys should not be used indefinitely. Key rotation involves period
 
 When a key is no longer needed or is suspected to be compromised, it should be revoked immediately. Key revocation is managed through certificate revocation lists (CRLs) and Online Certificate Status Protocol (OCSP) in PKI environments. Secure disposal techniques include zeroizing keys (overwriting memory) and physically destroying storage devices.
 
+:link: Refer also to [3.6.3 Public key infrastructure (PKI) (e.g., quantum key distribution)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/73aadeae0b75548d8e938bdc7e7c4bf771b80e49/DOMAIN3%3A%20Security%20Architecture%20and%20Engineering/3.06%20Select%20and%20determine%20cryptographic%20solutions.md#363-public-key-infrastructure-pki--eg-quantum-key-distribution)
+
 ### Open Questions ###
 
 1. What are the main types of encryption algorithms and how do they differ?
