Update 3.06 Select and determine cryptographic solutions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.06 Select and determine cryptographic solutions.md
@@ -280,13 +280,68 @@ Block ciphers provide strong security when implemented correctly, but they requi
 | **Use cases**                  | Video/audio streaming, VPN traffic, wireless comms | File encryption, disk encryption, secure messaging |
 | **Examples**                   | RC4, ChaCha20                                      | AES, 3DES                                          |
 
-While symmetric encryption is fast and efficient, it cannot solve the problem of secure key exchange over an untrusted network. This is where **asymmetric encryption** becomes essential. Asymmetric cryptography, also called public-key encryption, uses a pair of keys: a public key that is shared openly and a private key that is kept secret. A sender can encrypt a message with the recipient’s public key, ensuring that only the recipient can decrypt it using their private key.
+While symmetric encryption is fast and efficient, it cannot solve the problem of secure key exchange over an untrusted network. This is where **asymmetric encryption** becomes essential. Asymmetric cryptography, also called public-key encryption, uses a pair of keys: 
+- a **public key** that is shared openly and
+- a **private key** that is kept secret.
+
+- A sender can encrypt a message with the recipient’s public key, ensuring that only the recipient can decrypt it using their private key.
 
 Asymmetric encryption is widely used for securing online communications, including TLS (which protects web traffic) and secure email protocols like PGP. It also enables digital signatures, which prove that a message or document has not been tampered with and verify the sender’s identity. However, asymmetric encryption is computationally expensive and much slower than symmetric encryption. To balance performance and security, many systems use asymmetric encryption to exchange symmetric keys, combining the benefits of both methods.
 
+The following diagram depicts the differences between symmetric and asymmetric encryption and how asymmetric encryption can prevent MITM /man in the middle) attacks:
+
+```mermaid
+sequenceDiagram
+    title Symmetric vs Asymmetric Encryption
+
+    participant Alice as Alice (Sender)
+    participant Bob as Bob (Receiver)
+    participant Eve as Eve (Attacker)
+    participant CA as Certificate Authority (for asymmetric example)
+
+    %% --- Symmetric Encryption Part ---
+    Note over Alice,Bob: 🔷 Symmetric Encryption (Same Key for Encrypt & Decrypt)
+    Alice->>Alice: Generate secret key K
+    Alice->>Bob: Share K over secure channel (manual, pre-shared, or key exchange)
+    Note over Alice,Bob: Both now hold the same secret key K
+
+    Alice->>Bob: Encrypt message → C = Enc(K, M)
+    Bob->>Bob: Decrypt message → M = Dec(K, C)
+    Note over Alice,Bob: 🔑 Fast and efficient, but key distribution is hard\n(If Eve intercepts K → full compromise)
+
+    Eve-->>K: Try to intercept shared key (man-in-the-middle)
+    Note over Eve: If Eve gets K → can decrypt all messages!
+
+    %% --- Separator ---
+    Note over Alice,Bob: -----------------------------------
+
+    %% --- Asymmetric Encryption Part ---
+    Note over Alice,Bob: 🔶 Asymmetric Encryption (Public / Private Key Pair)
+    Bob->>Bob: Generate key pair (PublicKey_B, PrivateKey_B)
+    Bob->>CA: Request certificate with PublicKey_B
+    CA-->>Bob: Issue signed certificate {PublicKey_B, identity, CA signature}
+
+    Alice->>Bob: Get Bob’s PublicKey_B (or certificate)
+    Alice->>Bob: Encrypt message → C = Enc(PublicKey_B, M)
+    Bob->>Bob: Decrypt message → M = Dec(PrivateKey_B, C)
+
+    Note over Alice,Bob: ✅ No need to share private keys\nAnyone can send encrypted messages to Bob\nOnly Bob can decrypt
+
+    Eve-->>Alice: Sends fake PublicKey_E pretending to be Bob
+    Alice->>CA: Validate certificate chain
+    CA-->>Alice: Confirm Bob’s real PublicKey_B
+    Note over Eve,Alice: Certificate validation stops MITM attacks
+
+    %% Summary
+    Note over Alice,Bob: Summary:\n• Symmetric: same secret key → fast, simple, risky to share\n• Asymmetric: key pair (public/private) → secure exchange, slower\nOften combined: asymmetric used to exchange a symmetric session key
+
+```
+
 **Elliptic Curve Cryptography (ECC)** is a specialized form of asymmetric encryption that offers strong security with smaller key sizes. This makes it more efficient than traditional public-key algorithms like RSA. For example, ECC can provide the same level of security as a 2048-bit RSA key while using only a 256-bit ECC key. This efficiency makes ECC particularly useful for mobile devices, IoT, and blockchain applications where processing power and bandwidth are limited.
 
-Another area of cryptographic research is **quantum cryptography**, which addresses the future threat posed by quantum computers. Traditional encryption methods rely on mathematical problems that are difficult for classical computers to solve, but quantum computers could break them using advanced algorithms like Shor’s algorithm. To counter this, researchers are developing quantum-resistant cryptographic methods, known as post-quantum cryptography. Additionally, Quantum Key Distribution (QKD) offers a way to establish encryption keys using the principles of quantum mechanics, making it theoretically immune to eavesdropping. However, quantum cryptography is still in its early stages and not yet widely practical.
+Another area of cryptographic research is **quantum cryptography**, which addresses the future threat posed by quantum computers. Traditional encryption methods rely on mathematical problems that are difficult for classical computers to solve, but quantum computers could break them using advanced algorithms like Shor’s algorithm. To counter this, researchers are developing quantum-resistant cryptographic methods, known as post-quantum cryptography. 
+
+Additionally, **Quantum Key Distribution (QKD)** offers a way to establish encryption keys using the principles of quantum mechanics, making it theoretically immune to eavesdropping. However, quantum cryptography is still in its early stages and not yet widely practical.
 
 ### Open Questions ###
 
