Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -1,1 +1,34 @@
 ## Easy Questions ## 
+
+1. You are tasked with improving physical security measures for a SCADA (Supervisory Control and Data Acquisition) system in a critical infrastructure facility. Considering the various components involved, which of the following would present the greatest challenges in ensuring robust physical security?
+
+A. Data Acquisition Servers (DAS)
+B. Human Machine Interface (HMI)
+C. End User Backends
+D. Remote Terminal Unit (RTU)
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Remote Terminal Unit (RTU):
+RTUs often operate in remote, outdoor, or unmanned environments such as substations, pumping stations, or field sites. This makes them difficult to secure physically, as they are vulnerable to tampering, theft, or sabotage. They typically have fewer built-in security controls, and implementing robust barriers, surveillance, and intrusion detection is more complex due to their dispersed locations and maintenance access requirements.
+
+Incorrect Answers:
+
+❌ A. Data Acquisition Servers (DAS):
+These are usually located in secure, climate-controlled data centers or operational facilities. They benefit from strong physical protections like access controls, surveillance, and environmental safeguards, making them easier to secure than RTUs.
+
+❌ B. Human Machine Interface (HMI):
+HMIs are commonly found in secure control rooms where access is restricted to authorized operators. Physical risks are minimized through building security, locked enclosures, and supervised access.
+
+❌ C. End User Backends:
+These typically refer to administrative or management interfaces, where security relies more on logical and network protections (authentication, authorization, encryption) rather than physical barriers. Physical risks are comparatively minor.
+
+❌Explanation:
+The Remote Terminal Unit (RTU) is the most physically exposed component in SCADA environments. Because they are distributed across wide areas, often unattended, and difficult to monitor continuously, they present the greatest challenge for physical security. Effective protection requires creative solutions — including tamper-resistant enclosures, intrusion alarms, and remote monitoring — to mitigate both environmental and human threats.
+
+</details>
+
+---
+
