Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -32,3 +32,105 @@ The Remote Terminal Unit (RTU) is the most physically exposed component in SCADA
 
 ---
 
+
+2. You have implemented Cross-Origin Resource Sharing (CORS) in your web applications. Probably you have been recently a victim of...
+
+A. Phishing
+B. Man-in-the-Middle (MITM)
+C. Distributed Denial-of-Service (DDoS)
+D. Cross-Site Request Forgery (CSRF)
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Cross-Site Request Forgery (CSRF):
+CORS is used to define which origins (domains) can access web resources. While it doesn’t directly prevent CSRF, it plays an important role in mitigating cross-origin attacks by restricting unauthorized domains from making requests. When combined with CSRF tokens or referrer validation, it helps protect users from malicious, unauthorized actions triggered from other sites.
+
+Incorrect Answers:
+
+❌ A. Phishing:
+Phishing aims to deceive users into revealing sensitive data. CORS does not verify user intent or prevent fraudulent websites, so it offers no protection against phishing.
+
+❌ B. Man-in-the-Middle (MITM):
+MITM attacks occur at the network level, intercepting communications between a client and server. CORS cannot defend against MITM — HTTPS and TLS are required for that.
+
+❌ C. Distributed Denial-of-Service (DDoS):
+DDoS attacks flood a server with requests to exhaust its resources. CORS does not manage traffic volume or network load; firewalls, rate limiting, or DDoS mitigation services are needed for protection.
+
+Explanation:
+Cross-Origin Resource Sharing (CORS) controls how web applications handle requests from different domains. It’s particularly relevant when dealing with CSRF risks, since malicious sites can exploit browsers’ trust in existing sessions. By configuring CORS policies correctly and pairing them with CSRF defenses, developers strengthen web application security against cross-origin abuse.
+
+</details>
+
+---
+
+3. A large financial services company is consolidating its data processing operations into a single, highly secure data center. Given the critical need to protect the data center’s perimeter, which security measure should be prioritized to detect potential unauthorized access attempts?
+
+A. Install mantraps at all entrance points to control access
+B. Build a high-security fence with barbed wire along the outer boundary
+C. Install high-resolution CCTV cameras around the facility's perimeter
+D. Deploy a PIR (Passive Infrared Sensor) based system
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅  D. Deploy a PIR (Passive Infrared Sensor) based system:
+PIR sensors are designed to detect motion by sensing changes in infrared radiation emitted by people or animals. They serve as an effective real-time detection system for unauthorized movement near the perimeter. PIRs trigger alerts immediately upon detecting unusual motion, allowing for a rapid response to potential breaches. They are cost-effective, scalable, and can be combined with CCTV or alarms for verification and response coordination.
+
+Incorrect Answers:
+
+❌ A. Install mantraps at all entrance points to control access:
+Mantraps are effective for access control inside the facility but do not serve as detection mechanisms for perimeter intrusions. They prevent unauthorized entry rather than detect external movement.
+
+❌ B. Build a high-security fence with barbed wire along the outer boundary:
+Fences act as deterrents and physical barriers, not as active detection tools. While they help delay or discourage intruders, they do not generate alerts or notify security staff of attempted breaches.
+
+❌ C. Install high-resolution CCTV cameras around the facility's perimeter:
+CCTV cameras are useful for visual verification and post-incident investigation. However, without integration with motion detection or analytics, they rely on constant monitoring and do not inherently detect unauthorized activity in real time.
+
+Explanation:
+The question focuses on detection, not deterrence or access control.
+A Passive Infrared (PIR) system directly supports detection objectives by identifying motion at the perimeter, offering immediate alerts that can be verified through CCTV or on-site guards.
+While fences, cameras, and mantraps all contribute to a layered security approach, PIR sensors provide the first line of defense for early detection of potential intrusions — an essential component of a robust physical security program.
+
+</details>
+
+---
+
+4. Given the cipher transformation where (Olssv Kbkl | 7) is decoded to read as "Hello Dude," what would the decoded message be for (Emmb Ctclgle qgp | -2)?
+
+A. Good Morning sir
+B. Good bye friend
+C. Good Evening bye
+D. Good Evening sir
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ D. Good Evening sir
+This message is encoded using a Caesar cipher, a substitution cipher where each letter in the plaintext is shifted by a fixed number of positions in the alphabet.
+In this case, applying a shift of -2 (two positions backward) to “Emmb Ctclgle qgp” decodes it to “Good Evening sir.”
+
+Incorrect Answers:
+
+❌ A. Good Morning sir: Incorrect — the decryption of “Emmb Ctclgle qgp” does not match this phrase when applying a shift of -2.
+
+❌ B. Good bye friend: Incorrect — this does not align with the character shift pattern used.
+
+❌ C. Good Evening bye: Incorrect — partially matches, but the last word decrypts to “sir,” not “bye.”
+
+Explanation:
+The Caesar cipher is one of the simplest forms of encryption, based on shifting letters of the alphabet by a set amount.
+
+A positive shift moves characters forward (e.g., +7 shifts “H” to “O”), while
+
+A negative shift moves characters backward (e.g., -2 shifts “E” to “C”).
+
+In the example, the cipher (Olssv Kbkl | 7) decodes to “Hello Dude,” showing how a right shift of 7 works.
+Similarly, decoding (Emmb Ctclgle qgp | -2) involves moving each letter two steps left, resulting in “Good Evening sir.”
+
+</details>
+
+---
+
