Update 3.Q.2 Hard Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
@@ -40,3 +40,98 @@ These directly affect your ability to monitor and respond to incidents effective
 
 ---
 
+2. A bank's IT security administrator needs to ensure that software updates downloaded from the vendor's official website have not been altered or compromised by an unauthorized third party. Which of the following actions would be the most effective in verifying the integrity of these downloaded software updates?
+
+A. Using a VPN to securely download the software updates from the vendor’s official website
+B. Ensuring that the vendor is not listed on the PCI DSS blocklist before downloading the updates
+C. Contacting the vendor directly to confirm the authenticity of the downloaded software updates
+D. Comparing the downloaded software updates with a list of Tiger hashes provided by the vendor to verify their integrity
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ D. Comparing the downloaded software updates with a list of Tiger hashes provided by the vendor to verify their integrity
+Hash values, such as Tiger, SHA-256, or MD5 (depending on vendor), act as unique digital fingerprints of files. By computing the hash of the downloaded software and comparing it with the official hash published by the vendor, the administrator can confirm the file’s integrity — ensuring it hasn’t been altered, corrupted, or tampered with during transit or hosting.
+
+Incorrect Answers:
+
+❌ A. Using a VPN to securely download the software updates from the vendor’s official website:
+A VPN protects the communication channel, preventing eavesdropping or interception, but it does not guarantee the file’s integrity. The file could still have been compromised before being placed on the vendor’s site.
+
+❌ B. Ensuring that the vendor is not listed on the PCI DSS blocklist before downloading the updates:
+Checking blocklists relates to vendor reputation or compliance, not file integrity. Even a compliant vendor’s file could be tampered with if their systems are compromised.
+
+❌ C. Contacting the vendor directly to confirm the authenticity of the downloaded software updates:
+A phone or email confirmation ensures that updates exist but doesn’t verify that your specific downloaded file matches the original, unaltered version. Without a hash comparison, this step is insufficient.
+
+Explanation:
+Integrity verification ensures that what you downloaded is exactly what the vendor published.
+The Tiger hash comparison (or any cryptographic hash check) provides mathematical certainty that no modification — accidental or malicious — has occurred.
+Other methods like VPNs and vendor verification improve trust and confidentiality, but they do not directly validate file integrity, which is the key control in this scenario.
+
+</details>
+
+---
+
+3. The security department of a manufacturing company has recently discovered that many of the devices being used in their network lack secure default settings. These devices include routers, printers, and smart office equipment. As the CISO, you need to decide on the best approach to address this vulnerability. What should be your first course of action?
+
+A. Disable all non-essential devices in the network until their security configurations can be verified and secured
+B. Conduct a thorough inventory of all devices in the network to identify those without secure defaults before implementing any changes
+C. Immediately change the default passwords on all devices to complex, unique passwords and document the changes made
+D. Schedule a company-wide training session on the importance of cybersecurity, emphasizing the risks associated with using devices with insecure defaults
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅  B. Conduct a thorough inventory of all devices in the network to identify those without secure defaults before implementing any changes
+A comprehensive inventory allows the IT and security teams to understand the full scope of vulnerable devices, prioritize remediation actions, and plan systematic security improvements. This ensures resources are used effectively and all critical devices are addressed.
+
+Incorrect Answers:
+
+❌ A. Disable all non-essential devices in the network until their security configurations can be verified and secured:
+While this could temporarily reduce risk, it may disrupt operations and is not practical as a first step. It does not address the root cause or provide a clear plan for remediation.
+
+❌ C. Immediately change the default passwords on all devices to complex, unique passwords and document the changes made:
+Changing passwords is proactive but without knowing which devices exist, it may be inefficient and leave some devices unaddressed. Inventorying first ensures that no vulnerable devices are overlooked.
+
+❌ D. Schedule a company-wide training session on the importance of cybersecurity, emphasizing the risks associated with using devices with insecure defaults:
+Training is important for long-term security culture but does not immediately mitigate the risk of insecure devices and should follow technical remediation steps.
+
+Explanation:
+Before taking direct action, it is essential to know your environment. A detailed inventory identifies all devices, their configurations, and which are vulnerable due to insecure defaults. Once the scope is understood, remediation — such as changing passwords, applying secure configurations, and monitoring — can be executed systematically and effectively, minimizing operational disruption while strengthening security posture.
+
+</details>
+
+---
+
+In your manufacturing company, you are responsible for managing a large number of IoT devices. After an initial evaluation, you've discovered that many devices are operating on outdated firmware, even though they have not yet reached their end-of-life (EOL). What action should you take first?
+
+A. Contact IoT device vendors for on-site support
+B. Implement Over-the-Air (OTA) update capabilities
+C. Ensure that traffic between IoT devices and servers is properly encrypted
+D. Isolate all devices in a dedicated VLAN
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ B. Implement Over-the-Air (OTA) update capabilities
+OTA updates allow administrators to remotely update firmware across all IoT devices efficiently. This ensures devices are patched and secured without requiring physical access, reducing the window of vulnerability from outdated firmware while maintaining device integrity.
+
+Incorrect Answers:
+
+❌ A. Contact IoT device vendors for on-site support:
+On-site support may be helpful in specific scenarios, but it is time-consuming and not efficient as a first step. OTA updates are faster and scalable for large IoT deployments.
+
+❌ C. Ensure that traffic between IoT devices and servers is properly encrypted:
+While encryption protects data in transit, it does not address vulnerabilities due to outdated firmware. Firmware updates are a higher-priority action to fix security flaws.
+
+❌ D. Isolate all devices in a dedicated VLAN:
+Network segmentation improves security by limiting exposure, but it does not update firmware. This can be implemented later as part of a layered security approach.
+
+Explanation:
+The most urgent action is to remediate vulnerabilities in the firmware. OTA update capabilities enable efficient, large-scale deployment of security patches to IoT devices. After firmware is updated, additional measures like encryption and network segmentation further strengthen the security posture of IoT deployments.
+
+</details>
+
+---
+
