Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -134,3 +134,35 @@ Similarly, decoding (Emmb Ctclgle qgp | -2) involves moving each letter two step
 
 ---
 
+5. A tech startup is developing a new application that will handle sensitive user data, including personal identification information (PII). As part of their security practices, the development team is focused on ensuring that the application fails securely to minimize potential risks. During a review meeting, the team discusses various approaches to implement this principle effectively. What should the development team prioritize?
+
+A. Ensuring that the application defaults to a state that exposes minimal functionality in the event of a failure
+B. Implementing a detailed logging mechanism that captures errors without revealing sensitive information to unauthorized users
+C. Configuring the application to send all error messages directly to the data subject for immediate troubleshooting
+D. Setting the default admin password to a complicated sequence of letters, numbers, and special characters
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ A. Ensuring that the application defaults to a state that exposes minimal functionality in the event of a failure
+This approach follows the "fail securely" principle. By defaulting to a minimal functionality state, the application reduces the risk of unauthorized access, data leaks, or other security breaches during failures. The focus is on limiting exposure and protecting sensitive information even when something goes wrong.
+
+Incorrect Answers:
+
+❌ B. Implementing a detailed logging mechanism that captures errors without revealing sensitive information to unauthorized users:
+While important for debugging and monitoring, logging does not directly prevent exposure during a failure. It supports overall security practices but does not substitute for secure fail-state design.
+
+❌ C. Configuring the application to send all error messages directly to the data subject for immediate troubleshooting:
+This is highly insecure, as it could expose sensitive information to unauthorized users. Error handling should provide generic messages to users and detailed logs only for internal review.
+
+❌D. Setting the default admin password to a complicated sequence of letters, numbers, and special characters:
+Strong default passwords help secure administrative access but do not control application behavior during a failure. This is part of secure defaults, not fail-secure design.
+
+Explanation:
+Fail-secure design ensures that when an application fails, it does so in a way that minimizes risk, limiting functionality and access. Other measures, like logging or strong passwords, enhance security but are secondary to the fail-secure principle, which is focused specifically on safe behavior during failure events.
+
+</details>
+
+---
+
+
